--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "EXPO_NO_TELEMETRY=1 expo start",
     "build:web": "expo export --platform web",
-    "lint": "expo lint"
+    "lint": "expo lint",
+    "seed": "node --loader ts-node/esm scripts/seed.ts"
   },
   "dependencies": {
     "@expo/vector-icons": "^14.1.0",
@@ -30,6 +31,7 @@
     "expo-symbols": "^0.4.4",
     "expo-system-ui": "^5.0.7",
     "expo-web-browser": "^14.1.6",
+    "firebase": "^10.12.3",
     "lucide-react-native": "^0.511.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
@@ -49,6 +51,7 @@
   "devDependencies": {
     "@babel/core": "^7.27.1",
     "@types/react": "~19.1.5",
+    "ts-node": "^10.9.2",
     "typescript": "^5.8.3"
   }
 }
